# qc

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yaml
fbase/: Cargo.toml
fbase/src/: lib.rs
qc/: Cargo.toml
qc/src/: common.rs  error.rs  main.rs
src/: common.rs  error.rs  main.rs  opt.rs
